[tool.poetry]
name = "homework-14-1"
version = "0.1.0"
description = ""
authors = ["Nagaeva Elina <05batman@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
